--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1>Hello Coursera!</h1>
-<h2>Segundo Cambio por Edwin</h2>
+<h2 style="color:red">Segundo Cambio por Edwin</h2>
 </body>
 </html>
