"cambio en listas"

--- a/curso/listas.html
+++ b/curso/listas.html
@@ -11,10 +11,18 @@
 		<li>Cookies
 			<ul>
 				<li>chocolate</li>
-				<li>Sugar</li>
+				<li>Sugar
+					<ul>
+						<li>blanca</li>
+						<li>morena</li>
+					</ul>
+
+				</li>
 				<li>Peanut Butter</li>
+
 			</ul>
 		</li>
+		<li>pepto bismol</li>
 	</ul>
 
 </body>
